updated single select link append trips script to accommodate four time periods. Also, a quick summary of selectLinkResults.csv ODs and appended select link trips is produced. The output summary file is added in the global properties file. Issue #59

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -707,6 +707,7 @@ sl.cttrips.trace.destination = 2857
 
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
+sl.output.file.select.link.summary = sl_summary.csv
 
 sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/select_link_outputs.zip
 
