swim small properties file updates for new four time period select link procedure. Issue #59.

--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -649,6 +649,8 @@ ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.IN
 ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
 ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PK_PATHS.ver
 ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/OP_PATHS.ver
+ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PM_PATHS.ver
+ta.ni.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/NT_PATHS.ver
 
 ta.zone.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/zoneFieldNames.csv
 ta.link.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/linkFieldNames.csv
@@ -692,18 +694,20 @@ sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code
 sl.append.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/append_select_link_data.py
 sl.visum.mode = true
 
-sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'d_peak':5,'d_offpeak':6}
+sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'a_ni':3,'a_pm':4,'d_peak':5,'d_offpeak':6,'d_ni':7,'d_pm':8}
 
 sl.input.file.select.links = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/selectLinks_small.csv
 sl.ee.scaling.factor = 1.00
 #sl.internal.zone.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/InternalZones.txt
 
-#TODO: Need to identify the proper values for the properties below
-sl.auto.classes = a_peak,a_peak,a_peak,a_peak
-sl.truck.classes = d_peak,d_peak,d_peak,d_peak
+sl.auto.classes = a_peak,a_offpeak,a_pm,a_ni
+sl.truck.classes = d_peak,d_offpeak,d_pm,d_ni
+sl.cttrips.trace.origin = 3009
+sl.cttrips.trace.destination = 2857
 
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
+sl.output.file.select.link.summary = sl_summary.csv
 
 sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/select_link_outputs.zip
 
