update select link process. updates include: add summary for multi link process, correct weaving errors, add a python script to check for errors. Issue #90 and issue #85.

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -692,6 +692,7 @@ sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.I
 sl.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/build_select_link_matrices.py
 sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/get_link_sequence.py
 sl.append.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/append_select_link_data.py
+sl.check.select.link.output.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/check_select_link_output.py
 sl.visum.mode = true
 
 sl.visum.demand.segment.mapping = {'a_peak':1,'a_offpeak':2,'a_ni':3,'a_pm':4,'d_peak':5,'d_offpeak':6,'d_ni':7,'d_pm':8}
@@ -708,6 +709,7 @@ sl.cttrips.trace.destination = 2857
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
 sl.output.file.select.link.summary = sl_summary.csv
+sl.output.file.select.link.errors = sl_errors.csv
 
 sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/select_link_outputs.zip
 
