fix a type in SL review file.

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -709,7 +709,7 @@ sl.cttrips.trace.destination = 2857
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
 sl.output.file.select.link.summary = sl_summary.csv
-sl.output.file.select.link.errors = slreview.csv
+sl.output.file.select.link.errors = sl_review.csv
 
 sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/select_link_outputs.zip
 
