Adding changes needed to run SWIMR visualizations at the end of the run

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -734,3 +734,15 @@ viz.micro.zip.final.db = true
 viz.micro.subyear.dbs.wildcard = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/@SCENARIO.NAME@_t*_micro.db
 viz.micro.final.db = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/@SCENARIO.NAME@_micro.db
 viz.micro.zip.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/@SCENARIO.NAME@_micro.zip
+
+
+######################### SWIMR Graphics Properties ############################
+
+# Properties for rendering SWIMR HTML files
+swimr.render.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/swimr_render_rmd.R
+
+# Path to database with which to compare the current database
+swimr.reference.db = C:/Users/matt.landis/shared_data/tlumip_swim2/Ref25_repoUpdate.db
+
+# Path to database with which to compare the current and reference databases
+# swimr.compare.db =
