--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ build/*
 release/*
 /build/
 root/model/census/*.csv
-root/model/lib/java7/
+root/model/lib/java8/
 root/model/lib/Python27/
-root/model/lib/R-3.1.2/
+root/model/lib/R-3.3.2/
+root/model/lib/7za.exe
 .Rproj.user/
+.Rproj.user
