Bug fixes to get pandoc working on SWIMR Rmarkdown templates.

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -747,4 +747,4 @@ swimr.render.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/swimr_render_rmd
 swimr.reference.db = C:/Users/matt.landis/shared_data/tlumip_swim2/Ref25_repoUpdate.db
 
 # Path to database with which to compare the current and reference databases
-# swimr.compare.db =
+swimr.compare.db = C:/Users/matt.landis/shared_data/tlumip_swim2/Ref25_repoUpdate.db
