Adding latest input set along with slight property and code changes

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -55,8 +55,8 @@ microviz.combine.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/all_Viz_DB.R
 microviz.build.command.list = [|r.executable|,--no-save,<,|microviz.build.script|,>,logMicroVizDB.txt,INDCODEFILE="|industry.occupation.to.split.industry.correspondence|"]
 microviz.combine.command.list = [|r.executable|,--no-save,<,|microviz.combine.script|,>,logMicroVizDB.txt,BUILDDBS=F,BUILDSCRIPTFILENAME="|viz.build.script|",ALLZONESFILENAME="|all.zones.file|",D211FILE="|d211.fileName|",EXATTFILE="|extraAttribs.fileName|",SPATIALONLY=F,INDCODEFILE="|industry.occupation.to.split.industry.correspondence|",MICRO=T]
 viz.is.ts.year.indicator.file = ampeakAssignmentResults.csv
-viz.max.concurrent.ts = 4
-viz.max.concurrent.total = 12
+viz.max.concurrent.ts = 6
+viz.max.concurrent.total = 16
 
 model.run.program = @ROOT.DIR@/@SCENARIO.NAME@/run_model.bat
 model.setup.program = @ROOT.DIR@/@SCENARIO.NAME@/setup_run.bat
@@ -646,8 +646,8 @@ ta.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/tr.properties
 
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetwork2010_15.ver
-ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetwork2010_15.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_01_HIST_00_2010.ver
+ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_01_HIST_00_2010.ver
 ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PK_PATHS.ver
 ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/OP_PATHS.ver
 ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PM_PATHS.ver
@@ -672,7 +672,7 @@ ta.world.zone.distances = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameter
 ta.skim.matrix.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/hwySkimMatrixNames.csv
 tr.skim.matrix.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/transitSkimMatrixNames.csv
 ta.imp.exp.fields = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/impExpFields.csv
-ta.los.info = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/losInfo.csv
+ta.los.info = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/losInfo.csv
 
 # sdt trips by time-of-day output file
 sdt.tod.trips.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/sdtTODTrips.csv
@@ -727,7 +727,7 @@ viz.exchange.results.targets = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CU
 viz.delete.subyear.dbs = true
 viz.zip.final.db = true
 viz.subyear.dbs.wildcard = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/@SCENARIO.NAME@_t*.db
-viz.final.db = C:/Users/matt.landis/shared_data/tlumip_Visum18/root/scenario/outputs/scenario.db
+viz.final.db =  @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/@SCENARIO.NAME@.db
 
 viz.zip.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/@SCENARIO.NAME@.zip
 
@@ -743,8 +743,19 @@ viz.micro.zip.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/@SCENARIO.NAM
 # Properties for rendering SWIMR HTML files
 swimr.render.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/swimr_render_rmd.R
 
-# Path to database with which to compare the current database
-swimr.reference.db = C:/Users/matt.landis/shared_data/tlumip_swim2/Ref25_repoUpdate.db
+# Specify databases for visualizations
 
-# Path to database with which to compare the current and reference databases
-swimr.compare.db = C:/Users/matt.landis/shared_data/tlumip_swim2/Ref25_repoUpdate.db
+# SWIMR_reference -----------
+# "Current" database is viz.final.db as defined above
+
+# SWIMR_compare -------------
+# "Current" database is viz.final.db above
+# "Reference" database:
+swimr.reference.db = D:/swim2/Ref25_0_01_18/outputs/Ref25_0_01_18.db
+
+# SWIMR_popemp ---------------
+# "Current" database is viz.final.db above
+# "Reference" database is swimr.reference.db above
+# "Compare" database is:
+swimr.compare.db = D:/swim2/Ref25_0_01_18/outputs/Ref25_0_01_18.db
+
