--- a/root/scenario/inputs/t26/globalTemplateUpdate.properties
+++ b/root/scenario/inputs/t26/globalTemplateUpdate.properties
@@ -1,2 +1,4 @@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetwork2016_.ver
-ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetwork2016_.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_01_HIST_00_2016.ver
+ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_01_HIST_00_2016.ver
+ta.los.info = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t26/losInfo.csv
+fareZoneFares.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t26/IntraCityTransitFares.csv
