--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -133,7 +133,7 @@ sdt.bike.mph = 12.0
 # drive to transit speed
 sdt.drive.transit.mph = 25.0
 # auto operating cost
-auto.operating.cost = 0.18
+auto.operating.cost = 0.0867
 # length of first wait segment
 sdt.first.wait.segment = 10
 
@@ -234,15 +234,72 @@ spg1.write.frequency.tables = false
 
 # file locations for ED employment by industry - current year
 
+#file location for PUMA ALPHA cross-walk
+puma.beta.alpha.xwalk = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/puma_beta_alpha_xwalk.csv
+puma.alpha.unclean.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/puma_alpha_unclean.csv
+
+#file location for PUMAs within the SWIM region
+swim.pumas.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/swim_pumas.csv
+
+#file location for household size distribution
+hh.size.distribution = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/hh_dist.csv
+
+#file location for household and persons seed for Oregon, Califronia and Washington
+pseed_or = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_p41.csv
+pseed_wa = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_p53.csv
+pseed_ca = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_p06.csv
+hseed_or = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_h41.csv
+hseed_wa = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_h53.csv
+hseed_ca = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_h06.csv
+
+seed.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/seed_households.csv
+seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/seed_persons.csv
+
+#config files for SPG1 and SPG2
+controls.csv.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/controls.csv
+controls.csv.spg2 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG2/controls.csv
+settings.yaml.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/settings.yaml
+settings.yaml.spg2 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG2/settings.yaml
+logging.yaml.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/logging.yaml
+logging.yaml.spg2 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG2/logging.yaml
+
+popsim.py.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/run_populationsim.py
+popsim.bat.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/RunPopulationSim.bat
+
+
+#file location of spg1 and spg2 controls and geo cross walks
+spg1_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1
+spg2_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2
+spg1_data_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/data
+spg2_data_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/data
+spg1_configs_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/configs
+spg2_configs_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/configs
+spg1_output_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/output
+spg2_output_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/output
+
+spg1.control.subseed = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/data/control_subseed.csv
+spg1.control.region = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/data/control_region.csv
+spg1.geo.cross.walk = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/data/geo_cross_walk.csv
+spg2.control.alpha = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/data/control_alpha.csv
+spg2.control.region = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/data/control_region.csv
+spg2.geo.cross.walk = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/data/geo_cross_walk.csv
+
+
 # file location for workers per household marginals - base year until 2000
 spg1.workers.per.household.marginals = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/workersPerHouseholdMarginalxYEAR.csv
 
 # file location for jobs per worker factors - base year until 2000 - values set to 1 with NED update
 spg1.workers.per.job.factors = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/JobsToWorkersFactor.csv
 
-# file locations for SPG1 output files - current year
+# file locations for SPG1 and SPG2 output files - current year
 spg1.hhs.by.hh.category = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/householdsByHHCategory.csv
 spg1.hh.disk.object = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/zzhhArray.diskObject
+spg1.synthetic.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/output/spg1_synthetic_households.csv
+spg1.synthetic.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1/output/spg1_synthetic_persons.csv
+spg2.synthetic.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/output/spg2_synthetic_households.csv
+spg2.synthetic.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/output/spg2_synthetic_persons.csv
+spg2.synthetic.households.2 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/output/SynPopH.csv
+spg2.synthetic.persons.2 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG2/output/SynPopP.csv
 
 
 # file locations for PI output files used for SPG2 input - current year
@@ -273,6 +330,7 @@ spg.income.size.hh.size.upper.bounds = 2
 
 spg.use.acs = true
 acs.sw.occupation.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009.csv
+acs.sw.occupation.correspondence.edited.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009_edited.csv
 #acs.sw.industry.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_industry_2005_2009.csv
 
 acs.household.file.CA = @ROOT.DIR@/model/census/ss09hca.csv
@@ -758,4 +816,3 @@ swimr.reference.db = D:/swim2/Ref25_0_01_18/outputs/Ref25_0_01_18.db
 # "Reference" database is swimr.reference.db above
 # "Compare" database is:
 swimr.compare.db = D:/swim2/Ref25_0_01_18/outputs/Ref25_0_01_18.db
-
