update two file references

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -245,12 +245,12 @@ swim.pumas.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/swim_p
 hh.size.distribution = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/hh_dist.csv
 
 #file location for household and persons seed for Oregon, Califronia and Washington
-pseed_or = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_p41.csv
-pseed_wa = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_p53.csv
-pseed_ca = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_p06.csv
-hseed_or = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_h41.csv
-hseed_wa = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_h53.csv
-hseed_ca = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/psam_h06.csv
+pseed_or = @ROOT.DIR@/model/census/psam_p41.csv
+pseed_wa = @ROOT.DIR@/model/census/psam_p53.csv
+pseed_ca = @ROOT.DIR@/model/census/psam_p06.csv
+hseed_or = @ROOT.DIR@/model/census/psam_h41.csv
+hseed_wa = @ROOT.DIR@/model/census/psam_h53.csv
+hseed_ca = @ROOT.DIR@/model/census/psam_h06.csv
 
 seed.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/seed_households.csv
 seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/seed_persons.csv
@@ -330,7 +330,7 @@ spg.income.size.hh.size.upper.bounds = 2
 
 spg.use.acs = true
 acs.sw.occupation.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009.csv
-acs.sw.occupation.correspondence.edited.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009_edited.csv
+acs.sw.occupation.correspondence.edited.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009_forPopSim.csv
 #acs.sw.industry.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_industry_2005_2009.csv
 
 acs.household.file.CA = @ROOT.DIR@/model/census/ss09hca.csv
