--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -14,10 +14,10 @@ scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAM
 visum.version                                         = 18
 new.zone.system                                       = False
 
-
+#python.visum.executable required by Java SI module and should be the same as python.executable
 java.executable      = @ROOT.DIR@/model/lib/java8/jre/bin/java.exe
-python.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
-python.visum.executable = @ROOT.DIR@/model/lib/Python27/python.exe
+python.executable    = @ROOT.DIR@/model/lib/swimpy/python.exe
+python.visum.executable = @ROOT.DIR@/model/lib/swimpy/python.exe
 r.executable         = @ROOT.DIR@/model/lib/R-3.3.2/bin/x64/R.exe
 seven.zip.executable = @ROOT.DIR@/model/lib/7za.exe
 pandoc.executable = @ROOT.DIR@/model/lib/pandoc/pandoc.exe
@@ -252,8 +252,8 @@ hseed_or = @ROOT.DIR@/model/census/psam_h41.csv
 hseed_wa = @ROOT.DIR@/model/census/psam_h53.csv
 hseed_ca = @ROOT.DIR@/model/census/psam_h06.csv
 
-seed.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/seed_households.csv
-seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/Inputs/seed_persons.csv
+seed.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/seed_households.csv
+seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/seed_persons.csv
 
 #config files for SPG1 and SPG2
 controls.csv.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/controls.csv
@@ -263,9 +263,8 @@ settings.yaml.spg2 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/Pop
 logging.yaml.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/logging.yaml
 logging.yaml.spg2 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG2/logging.yaml
 
+popsim.script.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/PopulationSimSPG.py
 popsim.py.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/run_populationsim.py
-popsim.bat.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/RunPopulationSim.bat
-
 
 #file location of spg1 and spg2 controls and geo cross walks
 spg1_directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PopulationSim/SPG1
