--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -380,7 +380,7 @@ aa.reference.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 aa.base.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 
 ald.input.data = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@ALD.LAST.RUN@/
-spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@SPG1.LAST.RUN@/
+spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG1.LAST.RUN@/
 aa.floorspace.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 aa.current.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 aa.previous.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/
@@ -606,7 +606,7 @@ pi.beta.labor.flows=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@
 
 
 ## Input files from SPG
-spg2.previous.synpop.summary=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@SPG2.LAST.RUN@/SynPop_Taz_Summary.csv
+spg2.previous.synpop.summary=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG2.LAST.RUN@/SynPop_Taz_Summary.csv
 
 #these have to last for a whole multiyear run, so must exist outside of tyear framework
 daf.command.file.dir = @ROOT.DIR@/@SCENARIO.NAME@/model/config
