#114 spg copied this employment crosswalk file every year so move to parameters instead and update properties file

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -317,7 +317,7 @@ industry.list.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/spl
 occupation.list.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/occupations.csv
 pums.to.split.industry.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/pums_to_split_industry.csv
 pums.hh.selected.industry.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/zz_pums_hh_to_split_industry.csv
-industry.occupation.to.split.industry.correspondence  = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/zzIndustryOccupationSplitIndustryCorrespondence.csv
+industry.occupation.to.split.industry.correspondence  = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/zzIndustryOccupationSplitIndustryCorrespondence.csv
 
 #new acs stuff
 #headers used for spg file
