#114 write zone to 2010 puma crosswalk for popsim

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -235,12 +235,7 @@ spg1.write.frequency.tables = false
 # file locations for ED employment by industry - current year
 
 #file location for PUMA ALPHA cross-walk
-puma.beta.alpha.xwalk = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/puma_beta_alpha_xwalk.csv
-puma.alpha.unclean.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/puma_alpha_unclean.csv
-
-#file location for PUMAs within the SWIM region
-swim.pumas.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/swim_pumas.csv
-
+puma.beta.alpha.xwalk = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/puma_beta_alpha_xwalk.csv
 #file location for household size distribution
 hh.size.distribution = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/hh_dist.csv
 
@@ -710,8 +705,8 @@ ta.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/tr.properties
 
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_01_HIST_00_2010.ver
-ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_01_HIST_00_2010.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetwork2010_15_popsim.ver
+ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetwork2010_15_popsim.ver
 ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PK_PATHS.ver
 ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/OP_PATHS.ver
 ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PM_PATHS.ver
